fix margin collapse

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -13,4 +13,11 @@ html {
 body {
   color: #0c0c0c;
   background-color: #fbfbfb;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
 }
